test: create scenario with mix entities on Mapper Select
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>